2009-11-30  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Makefile.am: MOON_A11Y_INTERNAL_HACK is not needed anymore
	  since the audit finished in r147098. r: spouliot

2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Add ScrollViewer and
	  ScrollContentPresenter to the solution.

2009-11-20  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (system_windows_sources): add new files.

2009-11-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* Makefile.am: Remove second copy (dupe in a different namespace) 
	of IScrollInfo

2009-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Remove unneeded files from compilation

2009-11-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.mdp: Updated with new files.

2009-11-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Updated with new files.

	r: toshok

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (system_windows_sources): add BitmapCreateOptions.cs

	r: spouliot

2009-11-08  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (system_windows_sources): add out-of-browser class
	stubs.

	r: lewing

2009-11-08  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (system_windows_sources): add the effects classes.

	r: kangaroo

2009-10-22  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation/AutomationProperties.cs: Added callback to
	raise events when attached properties change.

	r: toshok


2009-10-09  Mario Carrion  <mcarrion@novell.com>

	* Makefile.am: File adde MultiScaleImageAutomationPeer.cs.

	r: toshok

2009-09-30  Jackson Harper  <jackson@ximian.com>

	* Makefile.am: Add some SL3 types so we can load
	System.Windows.Controls.Data.dll

	r: toshok

2009-09-29  Mario Carrion  <mcarrion@novell.com>

	* Makefile.am: File added: SWAP/PasswordBoxAutomationPeer.cs.

	r: spouliot

2009-09-23  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (system_windows_sources): add Mono/Events.g.cs

	r: spouliot, andriea
