@@ -520,6 +520,8 @@
     <File subtype="Code" buildaction="Compile" name="System.Windows.Media.Imaging/RenderTargetBitmap.cs" />
     <File subtype="Code" buildaction="Compile" name="../Microsoft.SilverlightControls/Controls/Src/ScrollViewer/ScrollContentPresenter.cs" />
     <File subtype="Code" buildaction="Compile" name="../Microsoft.SilverlightControls/Controls/Src/ScrollViewer/ScrollViewer.cs" />
+    <File subtype="Code" buildaction="Compile" name="System.Windows.Controls/VirtualizingPanel.cs" />
+    <File subtype="Code" buildaction="Compile" name="System.Windows.Controls/VirtualizingStackPanel.cs" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
