@@ -1,3 +1,7 @@
+2009-12-02  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.mdp: Update the build files.
+
 2009-11-30  Andrés G. Aragoneses  <aaragoneses@novell.com>
 
 	* Makefile.am: MOON_A11Y_INTERNAL_HACK is not needed anymore
